--- a/lib_code_java/src/main/AndroidManifest.xml
+++ b/lib_code_java/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.sean.codeutillib" />
+    package="com.sean.lib_code_java" />
