--- a/lib_code_java/build.gradle
+++ b/lib_code_java/build.gradle
@@ -16,9 +16,15 @@ android {
     }
 
     buildTypes {
+        debug {
+        }
+
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+
+        buildTypes.each {
         }
     }
 
